[package]
name = "shadow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
log = "0.4.20"
rand = "0.8.5"
rsa = "0.9.6"
secp256k1 = {version = "0.28.0", features = ["rand","hashes"]}
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
